# hopenote

./: .clang-format  .clang-tidy  .clangd  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt
src/: a.out  file_watcher.cc  file_watcher.hpp  main.cc  md2html.cc  md2html.hpp
test/: test.md
